Revision history for {{$dist->name}}

{{$NEXT}}

5.044     2016-04-06 20:32:14-04:00 America/New_York
        - require a newer List::Util to avoid a dumb bug caused by relying on
          side effects of loading Moose (thanks, Karen Etheridge!)

5.043     2016-01-04 22:54:56-05:00 America/New_York
        - dzil test now supports --extended to set EXTENDED_TESTING (thanks,
          Philippe Bruhat)

5.042     2015-11-26 09:05:37-05:00 America/New_York
        - try to avoid testing errors when the local time zone can't be
          determined (https://github.com/rjbs/Dist-Zilla/issues/497)

5.041     2015-10-27 22:07:54-04:00 America/New_York
        - add 'static_attribution' attribution to MakeMaker plugin
        - fix prereqs for App::Cmd and Config::MVP::Reader::INI

5.040     2015-10-13 11:42:25-04:00 America/New_York
        - the distribution tarball name no longer includes -TRIAL if the
          version contains an underscore

        - [PkgVersion] adds "$VERSION = $VERSION_SANS_UNDERSCORES" when
          version contains an underscore

        - made the PodCoverageTests and PodSyntaxTests plugins generate author
          tests, not release tests. These are tests you want passing on every
          commit, not just before a release (Dave Rolsky)

5.039     2015-08-10 09:03:08-04:00 America/New_York
        - update required version of MooseX::Role::Parameterized; older
          versions work, but can cause a bunch of unwanted warnings

5.038     2015-08-07 22:16:50-04:00 America/New_York
        - [License] can be given a filename option to use instead of LICENSE
        - dzil listdeps --develop now exists as an alias for dzil listdeps
          --author (Karen Etheridge)
        - dzil authordeps now lists the Software::License class needed
          (thanks, David Zurborg)
        - PkgVersion now skips .pod files (thanks, David Golden)
        - build_element support added for [ModuleBuild] (thanks, David
          Wheeler!)