@@ -2,6 +2,7 @@ use strict;
 use warnings;
 use Test::More 0.88;
 use Test::Deep;
+use Test::Fatal;
 
 use Test::DZil;
 
@@ -109,12 +110,41 @@ use Test::DZil;
     },
   );
 
-  $tzil->build;
+  like(
+    exception { $tzil->build },
+    qr/\Q[MakeMaker] found version range in runtime prerequisites, which ExtUtils::MakeMaker cannot parse (must specify eumm_version of at least 7.1101): External::Module <= 1.23\E/,
+    'build does not permit passing unparsable version range',
+  );
 
-  cmp_deeply(
-    $tzil->log_messages,
-    superbagof('[MakeMaker] found version range in runtime prerequisites, which ExtUtils::MakeMaker cannot parse: External::Module <= 1.23'),
-    'got warning about probably-unparsable version range',
+  diag 'got log messages: ', explain $tzil->log_messages
+    if not Test::Builder->new->is_passing;
+}
+
+{
+  my $tzil = Builder->from_config(
+    { dist_root => 'does-not-exist' },
+    {
+      add_files => {
+        'source/dist.ini' => simple_ini(
+          'GatherDir',
+          [ 'MakeMaker' => { eumm_version => '7.12' } ],
+          [ Prereqs => { 'External::Module' => '<= 1.23' } ],
+        ),
+        'source/lib/Foo.pm' => "package Foo;\n1\n",
+      },
+    },
+  );
+
+  $tzil->chrome->logger->set_debug(1);
+  is(
+    exception { $tzil->build },
+    undef,
+    'build proceeds normally',
+  );
+
+  ok(
+    !(grep { m'[MakeMaker] found version range' } @{ $tzil->log_messages }),
+    'got no warning about probably-unparsable version range',
   );
 
   diag 'got log messages: ', explain $tzil->log_messages
